--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,23 @@ html {
     scroll-snap-type: y proximity;
 }
 
+header {
+    max-width: 1400px;
+}
+
+#site-header {
+    position: fixed;
+    height: 300px;
+    top: 0;
+	width: 100%;
+	z-index: 100;
+	transition: all .3s ease;
+}
+
+#site-header.hide {
+	top: -150px;
+}
+
 body {
     background-color: lightgray;
     max-width: 1400px;
@@ -43,6 +60,7 @@ img {
     overflow: hidden;
     margin-bottom: 0;
     background-color: white;
+    box-shadow: 0 1px 25px rgba(0,0,0, .1);
 }
 
 .h-nav, .nav-menu {
