--- a/css/styles.css
+++ b/css/styles.css
@@ -43,29 +43,20 @@ img {
     /* display: block; */
 }
 
+.page-heading h1 {
+    padding: 2rem 5rem 2rem 5rem;
+    font-size: 32pt;
+    font-family: Oswald;
+}
+
 .scroll-section {
     scroll-snap-align: start;
     min-height: 100vh;
     position: relative;
 }
 
-/* About page */
-
-.about-page {
-    padding: 2rem 1rem 10rem 1rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    height: 100%;
-    grid-gap: 10rem;
-}
-
-.about-text {
-    margin: 0 auto;
-}
-
-.about-image img {
-    height: 100%;
-    object-fit: cover;
+.content-color {
+    background-color: white;
 }
 
 /* navigation panel */
@@ -82,7 +73,8 @@ img {
     line-height: 1rem;
     overflow: hidden;
     margin-bottom: 0;
-    background-color: white;
+    /* background-color: #2A65DE; */
+    background-color: #597cf0;
     box-shadow: 0 1px 25px rgba(0,0,0, .1);
 }
 
@@ -115,7 +107,8 @@ img {
     text-decoration: none;
     letter-spacing: 0.2rem;
     padding: 0.8rem;
-    color: #2A65DE;
+    /* color: #2A65DE; */
+    color: white;
 }
 
 .nav-menu a {
@@ -124,13 +117,47 @@ img {
 
 .nav-menu a:hover {
     transform: scale(1.2);
-    border-bottom: 1px solid #2A65DE;
+    border-bottom: 1px solid white;
+}
+
+
+/* About page */
+
+.about-page {
+    padding: 5rem 3rem 10rem 3rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    height: 100%;
+    grid-gap: 5rem;
+}
+
+.about-text {
+    margin: 0 auto;
+}
+
+.about-text p {
+    font-style: italic;
+    font-size: 16pt;
+    text-align: center;
+    line-height: 30pt;
+}
+
+.about-image {
+    /* border-collapse: separate; */
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.about-image img {
+    height: 100%;
+    object-fit: cover;
 }
 
 /* Cover Photo */
 
 .coverphoto {
     margin-top: 0;
+    margin-bottom: 0;
     width: 100%;
     /* height: 100%; */
     overflow: hidden;
@@ -139,12 +166,17 @@ img {
 
 /* Gallery page */
 
+.first-element {
+    min-height: 70vh;
+}
+
 .textbox {
-    margin-top: 50px;
-    margin-bottom: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .gallery-page {
+    margin-top: 0;
     padding: 0 1rem 10rem 1rem;
 }
 
@@ -193,6 +225,7 @@ img {
     }
 
     .header-nav {
+        padding: 0 2rem 0 2rem ;
         line-height: 1.5rem;
     }
 
@@ -219,11 +252,21 @@ img {
 }
 
 @media (min-width:900px) {
+    .about-page {
+        grid-template-columns: 1fr 1fr;
+    }
+    
+    .textbox {
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+
     .header-offset {
         padding-top: 89px;
     }
     .header-nav {
         justify-content: space-between;
+        
     }
 
     .nav-menu {
