--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ header {
 	top: -150px;
 }
 
-body {
+.body-page {
     background-color: lightgray;
     max-width: 1400px;
     margin: 0 auto;
@@ -43,10 +43,17 @@ img {
     /* display: block; */
 }
 
+video {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
 .page-heading h1 {
     padding: 2rem 5rem 2rem 5rem;
-    font-size: 32pt;
-    font-family: Oswald;
+    font-size: 48pt;
+    font-family: oswaldregular;
+    color: rgb(80, 80, 80);
 }
 
 .scroll-section {
@@ -57,6 +64,54 @@ img {
 
 .content-color {
     background-color: white;
+}
+
+/* landing page */
+
+.landing-video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.landing-body {
+    margin: 0 0 0 0;
+}
+
+.landing-container {
+    width: 1000px;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    /* justify-content: center; */
+
+}
+
+.landingh-nav {
+    display: flex;
+    justify-content: center;
+}
+
+.landingnav-menu {
+    display: flex;
+    justify-content: center;
+}
+
+.w-3 {
+    grid-column: span 3;
+    justify-self: center;
+}
+
+.landing-nav {
+    width: 100%;
+    margin-top: 400px;
+    position: sticky;
+    z-index: 100;
+    line-height: 1rem;
+    overflow: hidden;
+    margin-bottom: 0;
+    background-color: #4e65b3;
+    box-shadow: 0 1px 25px rgba(0,0,0, .1);
 }
 
 /* navigation panel */
@@ -74,16 +129,12 @@ img {
     overflow: hidden;
     margin-bottom: 0;
     /* background-color: #2A65DE; */
-    background-color: #597cf0;
+    background-color: #4e65b3;
     box-shadow: 0 1px 25px rgba(0,0,0, .1);
 }
 
 .h-nav, .nav-menu {
     text-transform: uppercase;
-}
-
-.nav-menu {
-    display: flex;
 }
 
 .nav-menu{
@@ -264,6 +315,7 @@ img {
     .header-offset {
         padding-top: 89px;
     }
+
     .header-nav {
         justify-content: space-between;
         
@@ -272,4 +324,13 @@ img {
     .nav-menu {
         width: auto;
     }
+}
+
+@font-face {
+    font-family: 'oswaldregular';
+    src: url('../fonts/oswald-variablefont_wght-webfont.woff2') format('woff2'),
+         url('../fonts/oswald-variablefont_wght-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
 }
