--- a/css/styles.css
+++ b/css/styles.css
@@ -101,6 +101,7 @@ video {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    background-image: url(https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/video/yannick-schulz-hot-lap-first-frame.png);
 }
 
 .landing-body {
