--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,7 @@ video {
     grid-column: 1/-1;
     grid-row: 1/-1;
     width: 100%;
-    height: 130px;
+    height: 200px;
     margin-top: 400px;
     z-index: 10;
     line-height: 1rem;
@@ -302,6 +302,10 @@ video {
 }
 
 @media (min-width:600px) {
+    .landing-nav {
+        height: 130px;
+    }
+
     .header-offset {
         padding-top: 139;
     }
