--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,6 @@ video {
 }
 
 .scroll-section {
-    scroll-snap-align: start;
     min-height: 100vh;
     position: relative;
 }
@@ -137,7 +136,7 @@ video {
     grid-column: 1/-1;
     grid-row: 1/-1;
     width: 100%;
-    height: 200px;
+    height: 160px;
     margin-top: 400px;
     z-index: 10;
     line-height: 1rem;
@@ -302,6 +301,15 @@ video {
 }
 
 @media (min-width:600px) {
+    .scroll-section {
+        scroll-snap-align: start;
+    }
+    
+    .page-heading h1 {
+        padding: 2rem 2rem 2rem 2rem;
+        font-size: 40pt;
+    }
+    
     .landing-nav {
         height: 130px;
     }
