--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ header {
 }
 
 .body-page {
-    background-color: lightgray;
+    background-color: white;
     max-width: 1400px;
     margin: 0 auto;
     padding: 0;
@@ -50,8 +50,8 @@ video {
 }
 
 .page-heading h1 {
-    padding: 2rem 5rem 2rem 5rem;
-    font-size: 48pt;
+    padding: 2rem 2rem 2rem 2rem;
+    font-size: 40pt;
     font-family: oswaldregular;
     color: rgb(80, 80, 80);
 }
@@ -100,6 +100,7 @@ video {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    overflow: hidden;
     background-color: #cccccc;
     background-image: url("https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/video/yannick-schulz-hot-lap-first-frame.png");
     background-repeat: no-repeat;
@@ -136,7 +137,7 @@ video {
     grid-column: 1/-1;
     grid-row: 1/-1;
     width: 100%;
-    height: 160px;
+    height: 170px;
     margin-top: 400px;
     z-index: 10;
     line-height: 1rem;
@@ -306,8 +307,8 @@ video {
     }
     
     .page-heading h1 {
-        padding: 2rem 2rem 2rem 2rem;
-        font-size: 40pt;
+        padding: 2rem 5rem 2rem 5rem;
+        font-size: 48pt;
     }
     
     .landing-nav {
@@ -346,6 +347,9 @@ video {
 }
 
 @media (min-width:900px) {
+    .body-page {
+        background-color: lightgray;
+    }
     .about-page {
         grid-template-columns: 1fr 1fr;
     }
