--- a/css/styles.css
+++ b/css/styles.css
@@ -274,7 +274,7 @@ video {
 
 .blog-nav {
     padding: 1rem 1rem 1rem 1rem;
-    background-color: white;
+    background-color: rgb(228, 251, 255);
     border: 3px solid black;
     min-width: 300px;
     max-width:500px;
@@ -285,9 +285,29 @@ video {
     list-style: decimal;
 }
 
+.blog-nav-menu-second {
+    padding-bottom: 10px;
+    list-style: lower-alpha;
+}
+
 .blog-nav-menu a {
     text-decoration: none;
     color: black;
+}
+
+.blog-floating-media {
+    width: 400px;
+    margin: 1rem;
+    float: none;
+}
+
+.blog-pic-row {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+}
+
+.blog-pic-row-pic {
+
 }
 
 
@@ -328,11 +348,6 @@ video {
     text-decoration: none;
 }
 
-.blog-floating-media {
-    max-width: 20%;
-    max-height: 100;
-    float: right;
-}
 
 /* Gallery page */
 
@@ -392,11 +407,15 @@ video {
 @media (min-width:1700px) {
     .blog-nav {
         position: fixed;
-        transform: translateX(-110%);
+        transform: translateX(-150%);
     }   
 }
 
 @media (min-width:600px) {
+    .blog-floating-media {
+        float: right;
+    }
+
     .scroll-section {
         scroll-snap-align: start;
     }
@@ -442,6 +461,11 @@ video {
 }
 
 @media (min-width:900px) {
+    .blog-add {
+        padding-left: 8rem;
+        padding-right: 8rem;
+    }
+
     .top-comment {
         padding-left: 10rem;
         padding-right: 10rem;
