added more media

--- a/css/styles.css
+++ b/css/styles.css
@@ -311,12 +311,14 @@ video {
 .blog-pic-row {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+    grid-auto-rows: 300px;
+    grid-gap: 1rem;
 }
 
 .blog-pic-row-pic {
-
+    overflow:  hidden;
+    
 }
-
 
 /* Blog top level page */
 
