--- a/css/styles.css
+++ b/css/styles.css
@@ -163,6 +163,7 @@ video {
 
 .header-offset {
     padding-top: 123px;
+    margin: 0;
 }
 
 .header-nav {
@@ -286,7 +287,7 @@ video {
     background-color: rgb(228, 251, 255);
     border: 3px solid black;
     min-width: 300px;
-    max-width:500px;
+    max-width: 500px;
     box-shadow: 10px 10px 20px rgba(0,0,0, .2);
 }
 
@@ -325,7 +326,7 @@ video {
 .blogtop-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(500px,1fr));
-    grid-auto-rows: 700px;
+    grid-auto-rows: auto;
     grid-gap: 2rem;
 }
 
@@ -340,21 +341,41 @@ video {
     grid-gap: 1rem;
     background-color: white;
     box-shadow: 0 1px 25px rgba(0,0,0, .1);
+    justify-content: center;
+    align-content: center;
 }
 
 .blogtop-item-img {
+    /* display: none; */
+    max-height: 400px;
     padding: 1rem 1rem 1rem 1rem;
+    overflow: hidden;
+    justify-content: center;
+    align-content: center;
 }
 
 .blogtop-item-text {
     padding: 1rem 1rem 1rem 1rem;
+    color: black;
 }
 
 .blogtop-item-text h2 {
     text-decoration: none;
 }
+
 .blogtop-item-text p {
     text-decoration: none;
+}
+
+.fade {
+    animation-name: fade;
+    animation-duration: 3s;
+}
+  
+@keyframes fade {
+    
+    from {opacity: .2} 
+    to {opacity: 1}
 }
 
 
