--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ header {
 }
 
 #site-header.hide {
-	top: -150px;
+	top: -180px;
 }
 
 .body-page {
@@ -155,7 +155,8 @@ video {
     margin-top: 400px;
     z-index: 10;
     line-height: 1rem;
-    background-color: #4e65b3;
+    background-color: #12648A;
+    /* background-color: #4e65b3; */
     box-shadow: 0 1px 25px rgba(0,0,0, .1);
 }
 
@@ -175,7 +176,7 @@ video {
     overflow: hidden;
     margin-bottom: 0;
     /* background-color: #2A65DE; */
-    background-color: #4e65b3;
+    background-color: #12648A;
     box-shadow: 0 1px 25px rgba(0,0,0, .1);
 }
 
@@ -284,7 +285,7 @@ video {
 
 .blog-nav {
     padding: 1rem 1rem 1rem 1rem;
-    background-color: rgb(228, 251, 255);
+    background-color: #c1dae6;
     border: 3px solid black;
     min-width: 300px;
     max-width: 500px;
@@ -428,7 +429,7 @@ video {
     grid-column: span 1;
 }
 
-@media (max-width:490px) {
+@media (max-width:571px) {
     .header-offset {
         padding-top: 164px;
     }
@@ -516,7 +517,7 @@ video {
     }
 
     .header-offset {
-        padding-top: 89px;
+        padding-top: 73px;
     }
 
     .header-nav {
