changed display on mobile to make it fit

--- a/css/styles.css
+++ b/css/styles.css
@@ -326,7 +326,7 @@ video {
 
 .blogtop-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(500px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(400px,1fr));
     grid-auto-rows: auto;
     grid-gap: 2rem;
 }
@@ -338,7 +338,7 @@ video {
 .blogtop-item {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 2fr 1fr;
+    grid-template-rows: 1fr 1fr;
     grid-gap: 1rem;
     background-color: white;
     box-shadow: 0 1px 25px rgba(0,0,0, .1);
@@ -348,7 +348,7 @@ video {
 
 .blogtop-item-img {
     /* display: none; */
-    max-height: 400px;
+    /* max-height: 400px; */
     padding: 1rem 1rem 1rem 1rem;
     overflow: hidden;
     justify-content: center;
@@ -443,6 +443,9 @@ video {
 }
 
 @media (min-width:600px) {
+    .blogtop-item {
+        grid-template-rows: 2fr 1fr;
+    }
     .blog-floating-media {
         margin: 1rem;
         float: right;
